network/api-gateway/test/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    # This tells Traefik to handle this Ingress
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: whoami.12w.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-service
            port:
              number: 80
